--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
-POSTGRES_CREDS = 'postgresql://user@test:pas#48998@localhost:5432/user_db'
+POSTGRES_USER_CREDS = 'postgresql://user@test:pas#48998@localhost:5432/user_db'
+POSTGRES_DISCUSSION_CREDS = 'postgresql://user@test:pas#48998@localhost:5432/discussion_db'
+POSTGRES_COMMENT_CREDS = 'postgresql://user@test:pas#48998@localhost:5432/comment_db'
 JWT_SECRET_KEY = 'k2HuNjxsveIxlyZGCxp_v5lTG4fT_hyQ5m0lqRJ8s0c'
